# R-TYPE

./: CMakeLists.txt  README.md  compile.sh  conanfile.txt
include/client/: Explode.hpp  IDisplay.hpp  SFMLDisplay.hpp
include/game_engine/: Engine.hpp  Entity.hpp  Scene.hpp  Sprite.hpp
include/game_engine/components/: AnimatorComponent.hpp  BehaviorComponent.hpp  EventComponent.hpp  HealthComponent.hpp  IComponent.hpp  RenderComponent.hpp  RigidBodyComponent.hpp  ShotComponent.hpp  TransformComponent.hpp
include/game_engine/encapsulation/: DirFiles.hpp
include/game_engine/pattern/: ComponentFactory.hpp
include/game_engine/systems/: AnimatorSystem.hpp  BehaviorSystem.hpp  EventSystem.hpp  HealthSystem.hpp  ISystem.hpp  RenderSystem.hpp  RigidBodySystem.hpp  ShotSystem.hpp  TransformSystem.hpp
include/server/: Game.hpp  IGame.hpp  User.hpp  rfc.hpp
src/client/: CMakeLists.txt  Explode.cpp  SFMLDisplay.cpp  main.cpp
src/game_engine/: Engine.cpp  Entity.cpp  Scene.cpp  Sprite.cpp
src/game_engine/components/: AnimatorComponent.cpp  BehaviorComponent.cpp  EventComponent.cpp  RenderComponent.cpp  RigidBodyComponent.cpp  ShotComponent.cpp  TransformComponent.cpp
src/game_engine/config/: sceneConfig.json  txt_play.json
src/game_engine/encapsulation/: DirFiles.cpp
src/game_engine/entities/: otherPlayer.json  player.json
src/game_engine/entities/level1/: boss.json  dit_non.json  eventail_bas1.json  eventail_bas2.json  eventail_bas3.json  eventail_haut1.json  eventail_haut2.json  eventail_haut3.json  fleur1.json  fleur2.json  fleur3.json  fleur4.json  lance_roquette1.json  lance_roquette2.json  marron_sol1.json  marron_sol2.json  papillon_rouge1.json  papillon_rouge2.json  papillon_rouge3.json  sauteur_fou.json  semi_boss.json  vrille1.json  vrille2.json  vrille3.json  vrille4.json  vrille5.json  vrille6.json
src/game_engine/pattern/: ComponentFactory.cpp
src/game_engine/poubelle_json/: ally.json  boss36.json  txt_play.json
src/game_engine/shots/: non-player.json  shot.json
src/game_engine/systems/: AnimatorSystem.cpp  BehaviorSystem.cpp  EventSystem.cpp  HealthSystem.cpp  RenderSystem.cpp  RigidBodySystem.cpp  ShotSystem.cpp  TransformSystem.cpp
src/server/: CMakeLists.txt  compile.sh  openPort.sh
src/server/client/: Client.cpp  Client.hpp  main.cpp
src/server/documentation/: rfc5000.txt
src/server/include/: IPlayer.hpp  IUdpServer.hpp  UdpServer.hpp
src/server/src/: Game.cpp  UdpServer.cpp  User.cpp  gameRules.cpp  main.cpp
src/server/src/actions/: GameActions.cpp  MenuActions.cpp
src/server/src/tcp/: TcpClient.cpp  TcpServer.cpp  TcpServer.hpp  text.txt
testing/: example.json  generate_json.cpp  megaTest.cpp  test.cpp
tests/: CMakeLists.txt  testmain.cpp
